Clean up configuration and initialization of providers