@@ -1,27 +1,35 @@
 package com.cgi.encryptionproxy.adapters;
 
-import com.cgi.encryptionproxy.util.ProviderRegistry.ConfigurableAdapter;
+import com.cgi.encryptionproxy.service.CryptoService;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.config.ConfigurableBeanFactory;
+import org.springframework.context.annotation.Scope;
+import org.springframework.stereotype.Component;
+import tools.jackson.databind.ObjectMapper;
 
+import java.net.URI;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
-import java.net.URI;
-import java.util.Base64;
+import java.util.Collection;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+@Component("VaultTransitAdapter")
+@Scope(ConfigurableBeanFactory.SCOPE_PROTOTYPE)
+public class VaultTransitAdapter implements ICryptoAdapter {
 
-import tools.jackson.databind.ObjectMapper;
-
-public class VaultTransitAdapter implements ICryptoAdapter, ConfigurableAdapter {
-
-    private static final Logger logger = LoggerFactory.getLogger(VaultTransitAdapter.class);
+    private static final Logger log = LoggerFactory.getLogger(VaultTransitAdapter.class);
 
     private String endpoint;
     private String token;
+
+    private final CryptoService cryptoService;
+
+    public VaultTransitAdapter(CryptoService cryptoService) {
+        this.cryptoService = cryptoService;
+    }
 
     @Override
     public void configure(Map<String, String> parameters) {
@@ -34,15 +42,19 @@ public class VaultTransitAdapter implements ICryptoAdapter, ConfigurableAdapter 
     }
 
     @Override
-    public String[] encryptBatch(CryptoOperation[] data) {
+    public String[] encryptBatch(List<CryptoTask> data) {
         try {
+            String vaultUrl = String.format("%s/encrypt/%s",
+                    endpoint.replaceAll("/$", ""),
+                    data.getFirst().getKeyName());
+
             String payload = buildBatchPayload(data);
             HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(endpoint + "/encrypt/" + data[0].getKeyName()))
-                .header("X-Vault-Token", token)
-                .header("Content-Type", "application/json")
-                .POST(HttpRequest.BodyPublishers.ofString(payload))
-                .build();
+                    .uri(URI.create(vaultUrl))
+                    .header("X-Vault-Token", token)
+                    .header("Content-Type", "application/json")
+                    .POST(HttpRequest.BodyPublishers.ofString(payload))
+                    .build();
 
             HttpResponse<String> response = HttpClient.newHttpClient().send(request, HttpResponse.BodyHandlers.ofString());
 
@@ -53,34 +65,36 @@ public class VaultTransitAdapter implements ICryptoAdapter, ConfigurableAdapter 
             var responseBody = response.body();
 
             // Log metadata for each encryption operation
-            for (CryptoOperation operation : data) {
-                logger.info("Encrypted data with metadata: {}", operation.getMetadataAsJson());
+            for (CryptoTask operation : data) {
+                log.info("Encrypted data with metadata: {}", operation.getMetadata());
             }
 
             return parseBatchResponse(responseBody);
         } catch (Exception e) {
             throw new RuntimeException("Error during encryption", e);
         }
+
+
     }
 
-    private String buildBatchPayload(CryptoOperation[] data) {
-        List<String> batchInput = List.of(data).stream()
-            .map(op -> String.format("{\"plaintext\":\"%s\", \"key_version\":%s}", op.getEncryptionPayload(), op.getKeyVersion()))
-            .collect(Collectors.toList());
+    private String buildBatchPayload(Collection<CryptoTask> data) {
+        List<String> batchInput = data.stream()
+                .map(op -> String.format("{\"plaintext\":\"%s\", \"key_version\":%s}", cryptoService.getCryptoTaskPayload(op), op.getKeyVersion()))
+                .toList();
 
         return String.format("{\"batch_input\":[%s]}", String.join(",", batchInput));
     }
 
     @Override
-    public String decryptBatch(CryptoOperation[] data) {
+    public String[] decryptBatch(List<CryptoTask> data) {
         try {
             String payload = buildPayload(data);
             HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(endpoint + "/v1/" + transitPath + "/decrypt"))
-                .header("X-Vault-Token", token)
-                .header("Content-Type", "application/json")
-                .POST(HttpRequest.BodyPublishers.ofString(payload))
-                .build();
+                    .uri(URI.create(endpoint + "/decrypt"))
+                    .header("X-Vault-Token", token)
+                    .header("Content-Type", "application/json")
+                    .POST(HttpRequest.BodyPublishers.ofString(payload))
+                    .build();
 
             HttpResponse<String> response = HttpClient.newHttpClient().send(request, HttpResponse.BodyHandlers.ofString());
 
@@ -88,22 +102,22 @@ public class VaultTransitAdapter implements ICryptoAdapter, ConfigurableAdapter 
                 throw new RuntimeException("Failed to decrypt data: " + response.body());
             }
 
-            return response.body();
+            throw new UnsupportedOperationException("Not implemented");
         } catch (Exception e) {
             throw new RuntimeException("Error during decryption", e);
         }
     }
 
     @Override
-    public String rewrapBatch(CryptoOperation[] data) {
+    public String[] rewrapBatch(List<CryptoTask> data) {
         try {
             String payload = buildPayload(data);
             HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(endpoint + "/v1/" + transitPath + "/rewrap"))
-                .header("X-Vault-Token", token)
-                .header("Content-Type", "application/json")
-                .POST(HttpRequest.BodyPublishers.ofString(payload))
-                .build();
+                    .uri(URI.create(endpoint + "/rewrap"))
+                    .header("X-Vault-Token", token)
+                    .header("Content-Type", "application/json")
+                    .POST(HttpRequest.BodyPublishers.ofString(payload))
+                    .build();
 
             HttpResponse<String> response = HttpClient.newHttpClient().send(request, HttpResponse.BodyHandlers.ofString());
 
@@ -111,22 +125,22 @@ public class VaultTransitAdapter implements ICryptoAdapter, ConfigurableAdapter 
                 throw new RuntimeException("Failed to rewrap data: " + response.body());
             }
 
-            return response.body();
+            throw new UnsupportedOperationException("Not implemented");
         } catch (Exception e) {
             throw new RuntimeException("Error during rewrapping", e);
         }
     }
 
-    private String buildPayload(CryptoOperation[] data) {
+    private String buildPayload(List<CryptoTask> data) {
         StringBuilder payloadBuilder = new StringBuilder();
         payloadBuilder.append("{\"batch_input\":[");
 
-        for (int i = 0; i < data.length; i++) {
+        for (int i = 0; i < data.size(); i++) {
             payloadBuilder.append("{\"plaintext\":\"")
-                .append(data[i].getEncryptionPayload())
-                .append("\"}");
+                    .append(cryptoService.getCryptoTaskPayload(data.get(i)))
+                    .append("\"}");
 
-            if (i < data.length - 1) {
+            if (i < data.size() - 1) {
                 payloadBuilder.append(",");
             }
         }
